[package]
name = "tungsten-proto"
version = "0.1.0"
authors = ["iamyaoxi <yosi.pramajaya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.11"
hyper = "0.13"
futures = "0.3"
futures-util = { version = "0.3", features = ["async-await", "sink", "std"] }
base64 = "0.13"
sha1 = "0.6.0"
async-trait = "0.1.42"